fix json ld detail post

--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -5,7 +5,6 @@
     <meta name="description" content="{{ post.title }}">
 {% endblock meta_description %}
 
-
 {% block structured_data %}
 <script type="application/ld+json">
 {
@@ -14,11 +13,12 @@
   "headline": "{{ post.title|escapejs }}",
   "description": "{{ post.clean_excerpt|truncatechars:250|escapejs }}",
   {% if post.image %}
-  "image": "{{ post.image.url }}",
+  "image": "https://cubangrooveperu.com{{ post.image.url }}",
   {% endif %}
   "author": {
     "@type": "Person",
-    "name": "{{ post.author.get_full_name|default:'Cuban Groove'|escapejs }}"
+    "name": "{{ post.author.get_full_name|default:'Cuban Groove'|escapejs }}",
+    "url": "https://cubangrooveperu.com/"
   },
   "publisher": {
     "@type": "Organization",
@@ -28,15 +28,21 @@
       "url": "https://cubangrooveperu.com/static/img/logos/logo_desk.webp"
     }
   },
-  "datePublished": "{{ post.published_date|date:'Y-m-d' }}",
-  "dateModified": "{{ post.published_date|date:'Y-m-d' }}",
+  "datePublished": "{{ post.published_date|date:'Y-m-d' }}T00:00:00-05:00",
+  "dateModified": "{{ post.published_date|date:'Y-m-d' }}T00:00:00-05:00",
+  "articleSection": "{% if post.location == 'miraflores' %}Salsa en Miraflores{% elif post.location == 'surco' %}Salsa en Surco{% elif post.location == 'sanisidro' %}Salsa en San Isidro{% elif post.location == 'lince' %}Salsa en Lince{% else %}Blog de Salsa Cubana{% endif %}",
+  "keywords": "salsa cubana, clases de baile, academia de salsa, danza, timba, afro cubano, cuban groove, {{ post.location|default:'Lima' }}",
+  "inLanguage": "es-PE",
+  "wordCount": "{{ post.content|striptags|wordcount }}",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://cubangrooveperu.com/{{ post.slug }}/"
+    "@id": "https://cubangrooveperu.com{% if post.location != 'general' %}/clases-de-salsa-en-{{ post.location }}/{% else %}/blog/{% endif %}{{ post.slug }}/"
   }
 }
 </script>
 {% endblock structured_data %}
+
+
 
 
 
