field hideen boot form

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -240,6 +240,7 @@
                             <input type="hidden" id="referer" name="referer">
                             <input type="hidden" id="user_agent" name="user_agent">
                             <input type="hidden" id="course_of_interest" name="course_of_interest">
+                            <input type="text" name="website" id="website" style="display:none !important;">
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
