--- a/templates/casting/basic_info.html
+++ b/templates/casting/basic_info.html
@@ -19,6 +19,8 @@
                 {% endif %}
                 <form id="basicInfoForm" method="POST" action="{% url 'casting_registration' %}" onsubmit="showProcessingOverlay();">
                     {% csrf_token %}
+                     <!-- Honeypot -->
+                    <input type="text" name="website" id="website" style="display:none !important;">
                     <!-- Nombre completo -->
                     <div class="mb-3">
                         <label for="fullName" class="form-label">Nombre Completo</label>
