--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -195,6 +195,10 @@
                         <input type="hidden" id="referer" name="referer">
                         <input type="hidden" id="user_agent" name="user_agent">
                         <input type="hidden" id="course_of_interest" name="course_of_interest" value="{{ course.title }}">
+
+                        <!-- Honeypot -->
+                        <input type="text" name="website" id="website" style="display:none !important;">
+
                         <div class="row g-3">
                             <div class="col-12">
                                 <div class="form-floating">
