--- a/templates/courses/course_detail_district.html
+++ b/templates/courses/course_detail_district.html
@@ -158,6 +158,9 @@
                         <input type="hidden" id="referer" name="referer">
                         <input type="hidden" id="user_agent" name="user_agent">
                         <input type="hidden" id="course_of_interest" name="course_of_interest">
+                         <!-- Honeypot -->
+                        <input type="text" name="website" id="website" style="display:none !important;">
+                        
                         <div class="row g-3">
                             <div class="col-12">
                                 <div class="form-floating">
