--- a/templates/courses/course_detail_otros.html
+++ b/templates/courses/course_detail_otros.html
@@ -149,6 +149,7 @@
 
                          <!-- Honeypot -->
                         <input type="text" name="website" id="website" style="display:none !important;">
+
                         
                         <div class="row g-3">
                             <div class="col-12">
@@ -440,53 +441,67 @@
     // 4️⃣ Envío de formulario de la ficha (Lead + WhatsApp)
     // ======================================================
     document.getElementById('submitForm_curso_detail').addEventListener('click', function () {
-    assignUTMsToAllForms(); // ✅ función global definida en _base.html
+        assignUTMsToAllForms();
 
-    const form = document.getElementById('leadForm_curso_detail');
-    const processingOverlay = document.getElementById('processingOverlay_curso_detail');
-    const thankYouMessage = document.getElementById('thankYouMessage_curso_detail');
+        const form = document.getElementById('leadForm_curso_detail');
+        const processingOverlay = document.getElementById('processingOverlay_curso_detail');
+        const thankYouMessage = document.getElementById('thankYouMessage_curso_detail');
 
-    if (form.checkValidity()) {
-        const formData = new FormData(form);
-        processingOverlay.classList.remove('d-none');
+        if (form.checkValidity()) {
 
-        fetch('/create-lead/', {
-        method: 'POST',
-        body: formData,
-        headers: { 'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value }
-        })
-        .then(r => r.json())
-        .then(data => {
-        if (data.success) {
-            // Ocultar formulario y mostrar mensaje de agradecimiento
-            form.classList.add('d-none');
-            thankYouMessage.classList.remove('d-none');
+            processingOverlay.classList.remove('d-none');
 
-            // Preparar mensaje de WhatsApp
-            const firstName = document.getElementById('name').value;
-            const lastName = document.getElementById('last_name').value;
-            const courseTitle = document.getElementById('course_of_interest').value;
-            const notes = document.getElementById('message').value;
+            grecaptcha.ready(function () {
+                grecaptcha.execute('{{ RECAPTCHA_SITE_KEY }}', { action: 'submit' })
+                .then(function (token) {
 
-            const whatsappMessage = `Hola, me llamo ${firstName} ${lastName}. Estoy interesado en el curso ${courseTitle}. ${notes}`;
-            const whatsappNumber = '51991337159';
-            const whatsappURL = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(whatsappMessage)}`;
-            window.open(whatsappURL, '_blank');
+                    // Colocar token
+                    const formData = new FormData(form);
+                    formData.append('recaptcha_token', token);
+
+                    fetch('/create-lead/', {
+                        method: 'POST',
+                        body: formData,
+                        headers: {
+                            'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value
+                        }
+                    })
+                    .then(r => r.json())
+                    .then(data => {
+                        if (data.success) {
+                            // Mostrar gracias
+                            form.classList.add('d-none');
+                            thankYouMessage.classList.remove('d-none');
+
+                            // Whatsapp
+                            const firstName = document.getElementById('name').value;
+                            const lastName = document.getElementById('last_name').value;
+                            const courseTitle = document.getElementById('course_of_interest').value;
+                            const notes = document.getElementById('message').value;
+
+                            const whatsappMessage =
+                                `Hola, me llamo ${firstName} ${lastName}. Estoy interesado en el curso ${courseTitle}. ${notes}`;
+
+                            window.open(
+                                `https://wa.me/51991337159?text=${encodeURIComponent(whatsappMessage)}`, '_blank'
+                            );
+                        } else {
+                            alert('Error al crear el lead.');
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                        alert('Ocurrió un error al enviar el formulario');
+                    })
+                    .finally(() => {
+                        processingOverlay.classList.add('d-none');
+                    });
+                });
+            });
+
         } else {
-            alert('Error al crear el lead');
+            form.classList.add('was-validated');
         }
-        })
-        .catch(error => {
-        console.error('Error:', error);
-        alert('Ocurrió un error al enviar el formulario');
-        })
-        .finally(() => {
-        processingOverlay.classList.add('d-none');
-        });
-
-    } else {
-        form.classList.add('was-validated');
-    }
     });
     </script>
 {% endblock javascript %}
