--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,6 +3,15 @@
 <html lang="es-PE">
 
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-14XVW4XNL5"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-14XVW4XNL5');
+    </script>
 
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -393,7 +402,12 @@
                     class="btn p-0 border-0 bg-transparent"
                     data-bs-toggle="modal"
                     data-bs-target="#exampleModal"
-                    title="Contáctanos por WhatsApp">
+                    title="Contáctanos por WhatsApp"
+                    onclick="gtag('event', 'whatsapp_icon_click', {
+                        categoria: 'whatsapp',
+                        accion: 'abrir_modal',
+                        etiqueta: 'icono_flotante'
+                    });">
                 <i class="fab fa-whatsapp fa-2x"></i>
             </button>
         </div>
